[gd_scene load_steps=28 format=3 uid="uid://t628ctc88cvo"]

[ext_resource type="Texture2D" uid="uid://cevko7tlkf4xg" path="res://assets/images/objects/clock/spr_clock_0.png" id="1_atiob"]
[ext_resource type="Script" path="res://scenes/objects/old_clock.gd" id="1_j08bl"]
[ext_resource type="Texture2D" uid="uid://cfjk48r1oafkq" path="res://assets/images/objects/clock/spr_clock_1.png" id="2_4w7d3"]
[ext_resource type="Texture2D" uid="uid://bbqtenbtapyxw" path="res://assets/images/objects/clock/spr_clock_2.png" id="3_d1ibk"]
[ext_resource type="Texture2D" uid="uid://fqn5xu3tvmtu" path="res://assets/images/objects/clock/spr_clock_3.png" id="4_xqkw0"]
[ext_resource type="Texture2D" uid="uid://c1gtfeoqnvjro" path="res://assets/images/objects/clock/spr_clock_4.png" id="5_et4h4"]
[ext_resource type="Texture2D" uid="uid://7rjw01yyw2yj" path="res://assets/images/objects/clock/spr_clock_5.png" id="6_1mlt5"]
[ext_resource type="Texture2D" uid="uid://cnuphbkr7lwy4" path="res://assets/images/objects/clock/spr_clock_6.png" id="7_vl11i"]
[ext_resource type="Texture2D" uid="uid://c25tgx1u80phr" path="res://assets/images/objects/clock/spr_clock_7.png" id="8_232c8"]
[ext_resource type="Texture2D" uid="uid://dla6wa880p2f5" path="res://assets/images/objects/clock/spr_clock_8.png" id="9_gjqxw"]
[ext_resource type="Texture2D" uid="uid://by205d8avimy3" path="res://assets/images/objects/clock/spr_clock_9.png" id="10_8717f"]
[ext_resource type="Texture2D" uid="uid://wpa8g7st4f35" path="res://assets/images/objects/clock/spr_clock_10.png" id="11_mvblu"]
[ext_resource type="Texture2D" uid="uid://ck6myhgkqeujr" path="res://assets/images/objects/clock/spr_clock_11.png" id="12_q737x"]
[ext_resource type="Texture2D" uid="uid://bdmsves0utmeo" path="res://assets/images/objects/clock/spr_clock_12.png" id="13_hqghf"]
[ext_resource type="Texture2D" uid="uid://dl4k662kwd1jp" path="res://assets/images/objects/clock/spr_clock_13.png" id="14_h4r1s"]
[ext_resource type="Texture2D" uid="uid://doxfh7c55bua3" path="res://assets/images/objects/clock/spr_clock_14.png" id="15_bj5iq"]
[ext_resource type="Texture2D" uid="uid://csuismu63ukyx" path="res://assets/images/objects/clock/spr_clock_15.png" id="16_xxbv6"]
[ext_resource type="Texture2D" uid="uid://c3y3jmb3ety01" path="res://assets/images/objects/clock/spr_clock_16.png" id="17_uekcf"]
[ext_resource type="Texture2D" uid="uid://dpxcxie5w3ur8" path="res://assets/images/objects/clock/spr_clock_17.png" id="18_vdi6u"]
[ext_resource type="Texture2D" uid="uid://chdgwhek701tn" path="res://assets/images/objects/clock/spr_clock_18.png" id="19_stkr3"]
[ext_resource type="Texture2D" uid="uid://cwbtimissffjc" path="res://assets/images/objects/clock/spr_clock_19.png" id="20_d2klm"]
[ext_resource type="Texture2D" uid="uid://c0i5814xv6vfn" path="res://assets/images/objects/clock/spr_clock_20.png" id="21_rqiqb"]
[ext_resource type="Texture2D" uid="uid://cd3cvam4yo1fw" path="res://assets/images/objects/clock/spr_clock_21.png" id="22_4diug"]
[ext_resource type="Texture2D" uid="uid://bm8hm3n8ey4xw" path="res://assets/images/objects/clock/spr_clock_22.png" id="23_mgjuc"]
[ext_resource type="Texture2D" uid="uid://c8gp1qgce8lqy" path="res://assets/images/objects/clock/spr_clock_23.png" id="24_cudnn"]
[ext_resource type="AudioStream" uid="uid://cbrla2fpq6pdo" path="res://assets/sounds/objs/clock.wav" id="25_padpd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bkysp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_atiob")
}, {
"duration": 1.0,
"texture": ExtResource("2_4w7d3")
}, {
"duration": 1.0,
"texture": ExtResource("3_d1ibk")
}, {
"duration": 1.0,
"texture": ExtResource("4_xqkw0")
}, {
"duration": 1.0,
"texture": ExtResource("5_et4h4")
}, {
"duration": 1.0,
"texture": ExtResource("6_1mlt5")
}, {
"duration": 1.0,
"texture": ExtResource("7_vl11i")
}, {
"duration": 1.0,
"texture": ExtResource("8_232c8")
}, {
"duration": 1.0,
"texture": ExtResource("9_gjqxw")
}, {
"duration": 1.0,
"texture": ExtResource("10_8717f")
}, {
"duration": 1.0,
"texture": ExtResource("11_mvblu")
}, {
"duration": 1.0,
"texture": ExtResource("12_q737x")
}, {
"duration": 1.0,
"texture": ExtResource("13_hqghf")
}, {
"duration": 1.0,
"texture": ExtResource("14_h4r1s")
}, {
"duration": 1.0,
"texture": ExtResource("15_bj5iq")
}, {
"duration": 1.0,
"texture": ExtResource("16_xxbv6")
}, {
"duration": 1.0,
"texture": ExtResource("17_uekcf")
}, {
"duration": 1.0,
"texture": ExtResource("18_vdi6u")
}, {
"duration": 1.0,
"texture": ExtResource("19_stkr3")
}, {
"duration": 1.0,
"texture": ExtResource("20_d2klm")
}, {
"duration": 1.0,
"texture": ExtResource("21_rqiqb")
}, {
"duration": 1.0,
"texture": ExtResource("22_4diug")
}, {
"duration": 1.0,
"texture": ExtResource("23_mgjuc")
}, {
"duration": 1.0,
"texture": ExtResource("24_cudnn")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="OldClock" type="Node2D"]
script = ExtResource("1_j08bl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bkysp")
autoplay = "default"
frame_progress = 0.148037

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_padpd")
volume_db = -3.026
autoplay = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -13.0
offset_top = -30.0
offset_right = 27.0
offset_bottom = 10.0
scale = Vector2(0.674511, 1.48181)
button_mask = 2

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
